[gd_scene load_steps=4 format=2]

[ext_resource path="res://player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://main_game/main_game.gd" type="Script" id=2]
[ext_resource path="res://asteroid/asteroid.tscn" type="PackedScene" id=3]

[node name="Main" type="Node"]
script = ExtResource( 2 )
Asteroid = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 512, 300 )

[node name="AsteroidTimer" type="Timer" parent="."]

[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="AsteroidTimer" to="." method="_on_AsteroidTimer_timeout"]
